# cmake-install-custom-lib

./: README.md
complexNumberLib-consumer/: CMakeLists.txt  main.cpp
complexNumberLib-static-shared/complexNumberLib/: CMakeLists.txt  complexNumbers.cpp
generated_libs/complexNumber-cpp/include/complexNumberLib/: complexNumbers.hpp
generated_libs/complexNumber-cpp/lib/: complexNumbers.lib  complexNumbersd.lib
generated_libs/complexNumber-cpp/lib/cmake/complexNumbers/: complexNumbersTargets.cmake
